fixed navbar collapse

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,6 @@
 
 header {
   width: 100vw;
-  height: 80px;
   background-color: darkred;
 }
 
